# todo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  backlog.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/actions/build-deploy-cloudrun/: action.yml
.github/actions/restore-frontend-artifact/: action.yml
.github/workflows/: _deploy.yml  ci.yml  cleanup-preview.yml  deploy-production.yml  deploy-staging.yml  preview.yml  rollback.yml  terraform-drift-check.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/auth/: email.py  routes.py  service.py
backend/shared/: auth.py  auth_models.py  config.py  firestore.py  models.py  ratelimit.py  todo_models.py
backend/tests/: test_auth_ratelimit.py  test_auth_service.py  test_service.py
backend/todo/: dependencies.py  routes.py  schemas.py  service.py
frontend/: .firebaserc  eslint.config.js  firebase.json.tpl  index.html  package-lock.json  package.json  playwright.config.ts  playwright.stub.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: auth.spec.ts  helpers.ts  security.spec.ts  todos.spec.ts
frontend/e2e-stub/: dark-mode.spec.ts  fixtures.ts  keyboard-shortcuts.spec.ts  security.spec.ts  service-worker-security.spec.ts  sidebar-workspace.spec.ts  todo-anonymous.spec.ts  todo-authenticated.spec.ts  views-and-organization.spec.ts
frontend/patches/: sonner+2.0.7.patch
frontend/public/: manifest.json
frontend/src/: app.css  main.tsx  registerServiceWorker.ts
infra/: SETUP.md
(+44 files in other folders)
